--- a/myshop/myshop.csproj
+++ b/myshop/myshop.csproj
@@ -22,6 +22,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.12" />
     <PackageReference Include="Stripe.net" Version="44.8.0" />
+    <PackageReference Include="X.PagedList.Mvc.Core" Version="9.1.2" />
   
   </ItemGroup>
 
